[project]
name = "rag-search-engine"
version = "0.1.0"
description = "A RAG Search Engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.10.0",
    "nltk==3.9.1",
    "numpy==2.3.3",
    "openai==2.44.0",
    "python-dotenv==1.1.0",
    "sentence-transformers>=5.6.0",
]
